--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,38 +8,71 @@
     <title>Página Principal</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
 
-    <div>   
-        <div class="logo">
-            <img src="assets/images/logo.png" width="200"/>
-        </div>
+    <header>
+        <img src="assets/images/logo.png" width="200" />
+    </header>
+
+    <div class="bar">
+
     </div>
 
     <main>
 
-    <div class="content">
-        <div class="sidebar">
-            <h2>Título</h2>
+        <nav class="sidebar">
+            <h2>Top 3 - Séries</h2>
+
             <ul>
-                <li><a href="#">Links</a></li>
+                <li><a href="index.html">Página Inicial</a></li>
+                <li><a href="veronica-mars.html">Veronica Mars</a></li>
+                <li><a href="doctor-who.html">Doctor Who</a></li>
+                <li><a href="gilmore-girls.html">Gilmore Girls</a></li>
             </ul>
+
+        </nav>
+
+        <div class="content">
+            <h2>Hi, stranger &#128516;</h2>
+            <p>Essa página foi criada para 3º desafio da trilha HTML da <a href="https://www.dio.me/">DIO.me</a>
+            </p>
+            <p>Seguindo as regras do desafio, escolhi o tema "séries" para poder recriar a página do <a
+                    href="https://pt.wikipedia.org/">Wikipédia</a> com um layout mais moderno.</p>
+            <p>Ainda que o foco dessa trilha não seja o CSS, tentei estilizar da melhor forma possível para que esse
+                projeto se torne agradável ao olhar
+                sem perder sua funcionalidade.</p>
+            <p>Use o menu à sua esquerda para navegar e descobrir o que o Wikipédia sabe sobre as minhas 3 séries
+                preferidas!</p>
+
+            <h2 id="sobre">Sobre a Dev &#128187;</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita incidunt, non in maxime vel
+                sapiente necessitatibus minima rem. Ullam maxime repellat quia iusto rem debitis aut. Eaque
+                laboriosam enim iusto?</p>
+
         </div>
 
-        <div class="main">
-            
-        </div>
+        <nav class="anchors">
 
-        <div class="anchors">
-            <h2>Neste Artigo</h2>
+            <h2>Conteúdo</h2>
+
             <ul>
-                <li><a href="#">Âncoras</a></li>
+                <li><a href="#">Início</a></li>
+                <li><a href="#sobre">Sobre a Dev</a></li>
             </ul>
-        </div>
-    </div>
 
-    <div class="footer">
+        </nav>
 
-    </div>
+    </main>
+
+    <footer>
+        <p>Página criada por Yandra Cipriano para o 3º desafio da Trilha HTML do DIO.me.</p>
+        <p>
+            <img src="assets/html5/html5-plain.svg" width="25px" title="HTML 5">
+            <img src="assets/css3/css3-plain.svg" width="25px"  title="CSS 3">
+        </p>
+    </footer>
+
 </body>
+
 </html>
